--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -147,6 +147,7 @@
         h2{
           text-align: center;
           font-weight: bold;
+          font-size: 25px;
 
           @media only screen and (max-device-width: 768px) {
             font-size: 45px;
@@ -283,14 +284,13 @@
           // list-style-position: inside;
           // direction: rtl;
           list-style: none;
-          overflow: hidden;
           padding: 0;
           li{
             font-size: 30px;
             padding-left:75px;
             position: relative;
-            margin-bottom:10px;
-            min-height: 75px;
+            margin-bottom:55px;
+            // min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
@@ -302,18 +302,14 @@
             }
 
             .img{
-              -webkit-transition: all .3s;/* Safari */
-              -moz-transition: all .3s;/*Firefox*/
-              -ms-transition: all .3s;/*IE10+*/
-              -o-transition: all .3s;/*Opera*/
-              transition: all .3s;
               position: absolute;
-              top:0;
+              top:50%;
               left: 0;
+              transform: translateY(-50%);
               width: 70px;
               height: 70px;
               background: #FFF;
-              border: solid 3px #A3CB00;
+              border: solid 1px #A3CB00;
               border-radius: 50%;
 
               @media only screen and (min-device-width: 1024px) {
@@ -407,15 +403,13 @@
           // list-style-position: inside;
           // direction: rtl;
           list-style: none;
-          overflow: hidden;
           padding: 0;
           li{
             font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
-            margin-bottom:10px;
-            min-height: 75px;
+            margin-bottom:55px;
 
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
@@ -427,18 +421,14 @@
             }
 
             .img{
-              -webkit-transition: all .3s;/* Safari */
-              -moz-transition: all .3s;/*Firefox*/
-              -ms-transition: all .3s;/*IE10+*/
-              -o-transition: all .3s;/*Opera*/
-              transition: all .3s;
               position: absolute;
-              top:0;
+              top:50%;
               left: 0;
+              transform: translateY(-50%);
               width: 70px;
               height: 70px;
               background: #FFF;
-              border: solid 3px #A3CB00;
+              border: solid 1px #A3CB00;
               border-radius: 50%;
 
               @media only screen and (min-device-width: 1024px) {
