--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -33,6 +33,16 @@
           width:880px;
         }
 
+        @media only screen and (max-device-width: 1024px) {
+          .sub-container{
+            position: absolute;
+            width:85%;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+          }
+        }
+
         h1{
           font-size: 65px;
           text-align: center;
