--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -38,6 +38,14 @@
             top: 30%;
             transform: translateY(30%);
           }
+
+          @media only screen and (max-device-width: 1024px) {
+            position: absolute;
+            width: 70%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, 100%);
+          }
         }
 
         .image-container{
