added video to the wine flight page.

--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -499,6 +499,11 @@ nav {
         top: 50%;
         transform: translateY(-50%);
         right: 10px; }
+        @media only screen and (max-device-width: 1024px) {
+          nav .nav .nav-item i {
+            right: 50px;
+            right: 20px;
+            font-size: 70px; } }
     @media only screen and (max-device-width: 1024px) {
       nav .nav {
         background-color: #fff;
@@ -511,6 +516,8 @@ nav {
           clear: both;
           width: 100%;
           border-bottom: 2px solid #A3CB00; }
+          nav .nav .nav-item .first {
+            text-transform: uppercase; }
           nav .nav .nav-item a {
             color: #000;
             font-size: 17px;
@@ -1055,6 +1062,18 @@ nav {
           @media only screen and (min-device-width: 1024px) {
             .wineflight #start-servises div .button .btn {
               font-size: 20px; } }
+  .wineflight #video-container div {
+    width: 45%;
+    position: relative;
+    min-height: 360px;
+    margin: 0 auto; }
+    .wineflight #video-container div iframe {
+      width: 100%; }
+    @media only screen and (max-device-width: 1024px) {
+      .wineflight #video-container div {
+        width: 85%; }
+        .wineflight #video-container div iframe {
+          width: 100%; } }
 
 .datacollection {
   font-family: 'Raleway', sans-serif; }
