--- a/app/css/main.css
+++ b/app/css/main.css
@@ -51,3 +51,36 @@
     margin: 15px 0 0 0;
     text-align: center;
     font-weight: bold; }
+
+#equipment {
+  width: auto;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap; }
+  #equipment .equipmentCol {
+    width: 130px;
+    display: inline-block;
+    vertical-align: top; }
+    #equipment .equipmentCol .equipmentHeader {
+      background-color: #28343a;
+      color: #FFF; }
+      #equipment .equipmentCol .equipmentHeader h2 {
+        text-align: center;
+        font-size: 15px; }
+    #equipment .equipmentCol .equipmentcell {
+      position: relative;
+      width: 100%; }
+      #equipment .equipmentCol .equipmentcell img {
+        width: 100%; }
+    #equipment .equipmentCol .selected::after {
+      background-image: url("../img/War-Cross-Mark-PNG-Picture.png");
+      background-size: 100% 100%;
+      display: inline-block;
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      z-index: 2;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      content: ""; }
