--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,6 +6,8 @@
 
 .panel-heading {
   position: relative; }
+  .panel-heading .myHR {
+    margin: 0 0 0 0; }
   .panel-heading .calculations {
     height: 60px;
     width: 305px;
@@ -18,6 +20,61 @@
       top: 50%;
       transform: translateY(-50%);
       margin: 0; }
+
+.panel-body .imageContainer {
+  position: relative;
+  width: 100%;
+  margin-top: -20px; }
+  .panel-body .imageContainer img {
+    width: 100%; }
+  .panel-body .imageContainer .storeTypesProfile {
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #37474f;
+    color: #FFF; }
+
+.store {
+  width: 100%;
+  height: 100px; }
+  .store .companyLogo {
+    height: 100px;
+    position: relative; }
+    .store .companyLogo img {
+      max-width: 80%;
+      max-height: 80%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .store .compannyNumberName {
+    height: 100%; }
+    .store .compannyNumberName h2 {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%); }
+
+.tableBasic .buttonToggle button {
+  display: inline-block;
+  width: 100px; }
+
+.resultStack div {
+  text-align: center; }
+  .resultStack div span {
+    font-size: 20px; }
+
+.valuesStack {
+  overflow: hidden; }
+  .valuesStack div {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center; }
+    .valuesStack div span {
+      font-size: 30px; }
 
 .label, td {
   text-align: right;
