--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,7 +7,9 @@
 
 .panel-heading{
   position: relative;
-
+  .myHR{
+    margin: 0 0 0 0;
+  }
   .calculations{
     height: 60px;
     width: 305px;
@@ -21,6 +23,91 @@
       top:50%;
       transform: translateY(-50%);
       margin: 0;
+    }
+  }
+}
+
+.panel-body{
+  .imageContainer{
+    position: relative;
+    width: 100%;
+    margin-top:-20px;
+    img{
+      width: 100%;
+    }
+    .storeTypesProfile{
+      padding: 10px;
+      position: absolute;
+      bottom:0;
+      left:0;
+      width: 100%;
+      height: 100px;
+      background-color:#37474f;
+      color:#FFF;
+    }
+  }
+}
+
+.store{
+  width: 100%;
+  height: 100px;
+  .companyLogo{
+    height: 100px;
+    position: relative;
+    img{
+      max-width: 80%;
+      max-height: 80%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  .compannyNumberName{
+    height: 100%;
+
+    h2{
+      margin:0;
+      position: absolute;
+      top:50%;
+      transform: translateY(-50%);
+    }
+  }
+}
+
+.tableBasic{
+  tbody{
+    tr{
+
+    }
+  }
+  .buttonToggle{
+    button{
+      display: inline-block;
+      width: 100px;
+    }
+  }
+}
+
+.resultStack{
+  div{
+    text-align: center;
+    span{
+      font-size:20px;
+    }
+  }
+}
+
+.valuesStack{
+  overflow: hidden;
+
+  div{
+    padding-top:10px;
+    padding-bottom:10px;
+    text-align: center;
+
+    span{
+      font-size:30px;
     }
   }
 }
