--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -121,6 +121,17 @@
   font-size: 14px;
 }
 
+#picosTable{
+  .label, td{
+    &:first-child{
+      text-align: left;
+    }
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+  }
+}
+
 .label{
   border-width: 2px;
   border-radius: 0;
