--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -93,7 +93,7 @@
   div{
     text-align: center;
     span{
-      font-size:20px;
+      font-size:30px;
     }
   }
 }
@@ -122,13 +122,19 @@
 }
 
 #picosTable{
+  thead{
+    th{
+      font-size: 18px !important;
+    }  
+  }
+
   .label, td{
     &:first-child{
       text-align: left;
     }
     text-align: center;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 18px;
   }
 }
 
