--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,9 @@
+th {
+  font-size: 16px !important; }
+
+td {
+  font-size: 20px !important; }
+
 .highlight {
   background-repeat: no-repeat;
   background-position: left;
@@ -33,26 +39,34 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     background-color: #37474f;
     color: #FFF; }
+    .panel-body .imageContainer .storeTypesProfile p {
+      font-size: 15px; }
 
-.store {
+.actionsCol button {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 20px;
+  font-size: 20px; }
+
+.actionsCol .store {
   width: 100%;
   height: 100px; }
-  .store .companyLogo {
+  .actionsCol .store .companyLogo {
     height: 100px;
     position: relative; }
-    .store .companyLogo img {
+    .actionsCol .store .companyLogo img {
       max-width: 80%;
       max-height: 80%;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
-  .store .compannyNumberName {
+  .actionsCol .store .compannyNumberName {
     height: 100%; }
-    .store .compannyNumberName h2 {
+    .actionsCol .store .compannyNumberName h2 {
       margin: 0;
       position: absolute;
       top: 50%;
@@ -82,9 +96,6 @@
   font-size: 14px; }
   .label:first-child, td:first-child {
     text-align: left; }
-
-#picosTable thead th {
-  font-size: 18px !important; }
 
 #picosTable .label, #picosTable td {
   text-align: center;
