--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,11 @@
+th{
+  font-size: 16px !important;
+}
+
+td  {
+  font-size: 20px !important;
+}
+
 .highlight{
   background-repeat: no-repeat;
   background-position: left;
@@ -41,36 +49,53 @@
       bottom:0;
       left:0;
       width: 100%;
-      height: 100px;
+      min-height: 100px;
       background-color:#37474f;
       color:#FFF;
+
+      h1{
+      }
+
+      p{
+        font-size:15px;
+      }
     }
   }
 }
 
-.store{
-  width: 100%;
-  height: 100px;
-  .companyLogo{
-    height: 100px;
-    position: relative;
-    img{
-      max-width: 80%;
-      max-height: 80%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-  .compannyNumberName{
-    height: 100%;
+.actionsCol{
 
-    h2{
-      margin:0;
-      position: absolute;
-      top:50%;
-      transform: translateY(-50%);
+  button{
+    width:100%;
+    height:50px;
+    margin-bottom:20px;
+    font-size:20px;
+  }
+
+  .store{
+    width: 100%;
+    height: 100px;
+    .companyLogo{
+      height: 100px;
+      position: relative;
+      img{
+        max-width: 80%;
+        max-height: 80%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    .compannyNumberName{
+      height: 100%;
+
+      h2{
+        margin:0;
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%);
+      }
     }
   }
 }
@@ -122,12 +147,6 @@
 }
 
 #picosTable{
-  thead{
-    th{
-      font-size: 18px !important;
-    }  
-  }
-
   .label, td{
     &:first-child{
       text-align: left;
