setting up for a demo.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,11 +4,21 @@ th {
 td {
   font-size: 20px !important; }
 
+.obscure {
+  overflow: hidden;
+  height: 0;
+  display: none; }
+
 .highlight {
   background-repeat: no-repeat;
   background-position: left;
   background-size: 25px;
   color: #F4511E; }
+
+.myNav {
+  font-size: 20px; }
+  .myNav i {
+    font-size: 15px !important; }
 
 .panel-heading {
   position: relative; }
@@ -93,7 +103,7 @@ td {
 .label, td {
   text-align: right;
   font-weight: 600;
-  font-size: 14px; }
+  font-size: 20px; }
   .label:first-child, td:first-child {
     text-align: left; }
 
@@ -110,7 +120,7 @@ td {
   position: relative; }
   .label img {
     display: inline;
-    height: 18px;
+    height: 30px;
     margin: 0px 5px;
     position: absolute;
     /* IE 8 */
