--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,6 +7,16 @@ td  {
 }
 
 
+.dataTables_scroll
+.dataTables_scrollBody th,
+.dataTables_scroll .dataTables_scrollBody td {
+  border: solid 1px #f5f5f5;
+
+  hr{
+    margin:5px 0;
+  }
+}
+
 .obscure{
   overflow: hidden;
   height: 0;
